# How-to-c-

./: .gitignore  CMakeLists.txt  README.md  TEST_Speed.cpp  main.cpp
.github/workflows/: ci.yml
inc/: Highflow.h  drehzahlueberwachung.h  highflow.h
src/: CMakeLists.txt  Highflow.cpp  drehzahlueberwachung.cpp  highflow.cpp
tests/: CMakeLists.txt  TEST_Speed.cpp  TEST_highflow.cpp
